--- a/index.html
+++ b/index.html
@@ -28,30 +28,42 @@
     </style>
 
 </head>
-<body>
+<body class="bg-[#f2f4f7 min-h-screen]">
     <!-- navbar part -->
-    <>
-        <h1>Job Application Tracker</h1>
-        <div>
-            <div>
-                <h2>Total</h2>
-                <p>0</p>
+
+    <!-- title part -->
+    <div class="max-w-6xl mx-auto px-4 py-8">
+        <h1 class="text-3xl font-extrabold text-[#002C5C]">Job Application Tracker</h1>
+
+        <!-- application part -->
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-12">
+
+            <!-- total div -->
+            <div class="bg-white p-6 rounded-xl border border-base-200 shadow-sm">
+                <h1 class="text-sm font-semibold text-base-content/60 mb-2 tracking-wide">Total</h1>
+                <p id="start-toral" class="text-4xl font-black text-base-content">0</p>
             </div>
-            <div>
-                <h2>Interview</h2>
-                <p>0</p>
+
+            <!-- interview div -->
+            <div class="bg-white p-6 rounded-xl border border-base-200 shadow-sm">
+                <h1 class="text-sm font-semibold text-base-content/60 mb-2 tracking-wide">Interview</h1>
+                <p id="start-toral" class="text-4xl font-black text-base-content">0</p>
             </div>
-            <div>
-                <h2>Rejected</h2>
-                <p>0</p>
+
+            <!-- rejected div -->
+            <div class="bg-white p-6 rounded-xl border border-base-200 shadow-sm">
+                <h1 class="text-sm font-semibold text-base-content/60 mb-2 tracking-wide">Rejected</h1>
+                <p id="start-toral" class="text-4xl font-black text-base-content">0</p>
             </div>
         </div>
 
         <hr>
 
+        
 
+    </div>
 
     <!-- js addition -->
-    <script src=""></script>
+    <script src="./script.js"></script>
 </body>
 </html>
