--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </style>
 
 </head>
-<body class="bg-[#f2f4f7 min-h-screen]">
+<body class="bg-[#f2f4f7] min-h-screen">
     <!-- navbar part -->
 
     <!-- title part -->
@@ -57,9 +57,32 @@
             </div>
         </div>
 
-        <hr>
+        <hr class="text-base-content-60">
 
+        <!-- job part -->
+        <div class="pt-8 flex flex-col md:flex-row justify-between items-start md:items-center mb-8 gap-4">
+
+            <!-- middle part -->
+            <div>
+                <h2>Available Jobs</h2>
+                <div>
+                    <button>All</button>
+                    <button>Interview</button>
+                    <button>Rejected</button>
+                </div>
+            </div>
+            <div>
+                <span>0</span>jobs
+            </div>
+        </div>
+
+        <div></div>
         
+        <div>
+            <img src="" alt="">
+            <h3></h3>
+            <p></p>
+        </div>
 
     </div>
 
