--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
             <!-- middle part -->
             <div>
-                <h2 class="text-xl font-bold text-[#002d5b] mb-4">Available Jobs</h2>
+                <h2 class="text-xl font-bold text-[#002C5C] mb-4">Available Jobs</h2>
 
                 <!-- buttons -->
                 <div role="tablist" class="tabs tabs-boxed flex bg-white">
@@ -75,20 +75,24 @@
             </div>
 
             <!-- how many jobs -->
-            <div>
-                <span>0</span>jobs
+            <div class="text-base-content opacity-50 font-medium">
+                <span id="current-count">0</span>jobs
             </div>
         </div>
 
-        <div></div>
+        <div id="job-grid" class="grid grid-cols-1 gap-6"></div>
         
-        <div>
-            <img src="" alt="">
-            <h3></h3>
-            <p></p>
+        <!-- empty places -->
+        <div id="empty-state" class="hidden flex-col items-center justify-center py-24 text-center">
+            <img src="./assets/jobs.png" alt="" class="w-32 mb-6 opacity-40">
+            <h3 class="text-2xl font-bold text-[#002C5C] mb-2">No jobs available</h3>
+            <p class="opacity-60">Check back soon for new job opportunities</p>
         </div>
 
     </div>
+
+    <!-- cards part -->
+     
 
     <!-- js addition -->
     <script src="./script.js"></script>
