--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
                 </div>
 
                 <!-- not applied part -->
-                <div class="badge bg-[#eef0ff] text-[#002C5C] border-none font-semibold py-5 px-5 rounded-xl my-4 tracking-wide">NOT APPLIED</div>
+                <div class="mt-3 badge bg-[#eef0ff] text-[#002C5C] border-none font-semibold py-4 px-4 rounded-sm tracking-wide">NOT APPLIED</div>
 
                 <p class="description text-[#64748B] text-sm leading-relaxed"></p>
 
-                <div class="card-actions justify-start mt-6">
-                    <button class="interview-btn btn btn-sm btn-outline btn-success px-6">INTERVIEW</button>
-                    <button class="rejected-btn btn btn-sm btn-outline btn-error px-6">REJECTED</button>
+                <div class="card-actions justify-start mt-3">
+                    <button class="interview-btn btn btn-sm btn-outline btn-success px-4">INTERVIEW</button>
+                    <button class="rejected-btn btn btn-sm btn-outline btn-error px-4">REJECTED</button>
                 </div>
             </div>
         </div>
