--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Job Application Tracker</title>
 
     <!-- logo link -->
-    <link rel="stylesheet" href="./assets/logo.png">
+    <link rel="icon" href="./assets/logo.png">
+    <link src="./assets/logo.png" alt="" width="150">
 
     <!-- tailwind + css -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
